2_nginx_ingress/ingress-trust96.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-81
  namespace: nginx-ingress
  annotations:
    virtual-server.f5.com/partition: "node2"
    virtual-server.f5.com/ip: 10.192.142.56
    virtual-server.f5.com/http-port: "80"
    virtual-server.f5.com/ssl-redirect: "false"
    virtual-server.f5.com/balance: "round-robin"
    virtual-server.f5.com/health: |
      [
        {
          "path":     "/",
          "send":     "HTTP GET /\r\n",
          "interval": 5,
          "timeout":  10
        }
      ]
spec:
  backend:
    serviceName: nginx-ingress
    servicePort: 80
